WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223993
In case WebRTC VTB decoder returns a null frame, mark the decoder as failing
https://bugs.webkit.org/show_bug.cgi?id=223993
Summary
In case WebRTC VTB decoder returns a null frame, mark the decoder as failing
youenn fablet
Reported
2021-03-31 05:25:04 PDT
In case WebRTC H264 decoder returns a null frame, mark the decoder as failing
Attachments
Patch
(6.83 KB, patch)
2021-03-31 05:26 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(11.33 KB, patch)
2021-03-31 05:45 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-03-31 05:26:01 PDT
Created
attachment 424757
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2021-03-31 05:27:27 PDT
<
rdar://problem/76049206
>
youenn fablet
Comment 3
2021-03-31 05:45:13 PDT
Created
attachment 424761
[details]
Patch
EWS
Comment 4
2021-03-31 12:25:27 PDT
Committed
r275300
: <
https://commits.webkit.org/r275300
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424761
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug